feat: implementa arquitetura modular e integração com base de dados e-GTO para ranges

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <div id="feedback-treino" class="feedback-msg">Aguardando cérebro Python...</div>
 
                 <div id="sizing-bar" class="sizing-row" style="display: none; margin-bottom: 10px;">
-                    <button class="btn-sizing" onclick="definirAposta(0.33)">1/3</button>
-                    <button class="btn-sizing" onclick="definirAposta(0.5)">1/2</button>
-                    <button class="btn-sizing" onclick="definirAposta(0.75)">3/4</button>
-                    <button class="btn-sizing" onclick="definirAposta(1)">POT</button>
-                </div>
+    <button class="btn-sizing" onclick="definirAposta(0.3)">30%</button>
+    <button class="btn-sizing" onclick="definirAposta(0.5)">50%</button>
+    <button class="btn-sizing" onclick="definirAposta(0.75)">75%</button>
+    <button class="btn-sizing" onclick="definirAposta(1)">POT</button>
+</div>
 
                 <div class="botoes-acao">
                     <button class="btn-acao fold" onclick="verificarAcao('FOLD')">FOLD</button>
